<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="capstone">Capstone</string>
    <string name="reader">XYZ Reader</string>
    <string name="built_bigger">Build It Bigger</string>
    <string name="library_app">Library App</string>
    <string name="score">Scores App</string>
    <string name="stramer">Spotify Streamer</string>
    <string name="my_nanodegree">My Nanodegree Apps!</string>
</resources>
